Prevent context menus from creating overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -30,6 +30,10 @@ button:hover {
     cursor: pointer;
 }
 
+select:focus-visible {
+    outline: none;
+}
+
 #title-bar {
     width: 100%;
     display: flex;
